force-app/main/default/objects/Risk_Category__c/Risk_Category__c.object-meta.xml
<CustomObject>
    <label>Risk Category</label>
    <nameField>
        <label>Risk Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>